--- a/index_wallet.html
+++ b/index_wallet.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DarkCrypto</title>
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="/main/style-wallet.css" rel="stylesheet" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./main/style-wallet.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Miriam+Libre:wght@400;700&family=Nanum+Myeongjo&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <header class="d-flex align-items-center py-3 mb-4">
-      <h2 class="mr-auto text-white">DarkCrypto</h2>
+      <h1 class="mr-auto text-white">DarkCrypto</h1>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Головна</a>
-        <a class="nav-link" href="#">Про нас</a>
-        <a class="nav-link" href="#">Мій гаманець</a>
-        <a class="nav-link" href="#">Підтримка інвестицій</a>
+        <a class="nav-link active" href="index.html">Home</a>
+        <a class="nav-link" href="index.html #AboutUs">About us</a>
+        <a class="nav-link" href="#">....</a>
+        <a class="nav-link" href="#">...</a>
       </nav>
     </header>
 
-    <div class="image-container text-center">
-      <img src="card.jpg" alt="Descriptive Alt Text" class="fixed-size-image" />
-    </div>
+    <!-- <div class="image-container text-center">
+      <img src="./img/card.jpg" alt="Descriptive Alt Text" class="fixed-size-image" />
+    </div> -->
 
     <div class="user-info-card">
       <div class="user-info-header">
